[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moltbook-agent-manager"
version = "3.1.0"
description = "A desktop app for deploying and managing AI agents on Moltbook"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "NeatLabs"}
]
keywords = [
    "moltbook",
    "ai-agents",
    "social-network",
    "desktop-app",
    "customtkinter",
    "openai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "customtkinter>=5.2.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "openai>=0.28.0,<1.0.0",
]

[project.optional-dependencies]
security = [
    "keyring>=24.0.0",
    "cryptography>=41.0.0",
]
full = [
    "keyring>=24.0.0",
    "cryptography>=41.0.0",
    "matplotlib>=3.8.0",
    "pystray>=0.19.0",
    "schedule>=1.2.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/neatlabs/moltbook-agent-manager"
Documentation = "https://github.com/neatlabs/moltbook-agent-manager#readme"
Repository = "https://github.com/neatlabs/moltbook-agent-manager.git"
Issues = "https://github.com/neatlabs/moltbook-agent-manager/issues"
Changelog = "https://github.com/neatlabs/moltbook-agent-manager/blob/main/CHANGELOG.md"

[project.scripts]
moltbook-manager = "moltbook_agent_manager:main"

[tool.setuptools]
py-modules = ["moltbook_agent_manager"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.flake8]
max-line-length = 120
ignore = ["E501", "W503"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
